# libssh2-playground

./: CMakeLists.txt  local-build.cmd
src/: main.c
